# Astraia

./: .gitignore  Claude.md  README.md
android/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  astraia_jni.c  astraia_jni_cont.c  astraia_jni_ext.c
android/app/src/main/java/com/eklos/astraia/: AnalysisSidebar.kt  AnalysisViewModel.kt  BoardAnalysisPanel.kt  CpuMonitor.kt  EdaxContinuousBridge.kt  EdaxEngine.java  GameState.kt  GameTreePanel.kt  KifuImportSection.kt  KifuParser.kt  MainActivity.kt  PerformanceOverlay.kt  PerformanceStreamUseCase.kt  ThermalThrottleManager.kt
src/: android-edax.c  count_last_flip_bitscan.c  root.c  search.c  search.h  ybwc.c  ybwc.h
